tests/sumo/output/e1Instant/errors/lane_missing/errors.sumo
Error: Attribute 'lane' is missing in definition of instantInductionLoop '4/1to3/1'.
Quitting (on error).
